More updates to the project.