@@ -1,3 +1,8 @@
 #!/bin/bash
-java -Xmx4048M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=650m -jar -Dhttp.nonProxyHosts=nexus.global.trafigura.com sbt/sbt-launch.jar "project databases" "run-main starling.databases.utils.RefreshDatabase $1 $2 $3 $4"
+
+BUILD_PATH=$(dirname $0)
+cd $BUILD_PATH
+cd ..
+
+sbt/sbt "project databases" "run-main starling.databases.utils.RefreshDatabase $1 $2 $3 $4"
  
